// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hierarchies > %p HTML: BASIC 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo</h1>
<p><a href="/foo.ch1.html">Ch1</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p HTML: DIFF_HIERARCHY_TITLE 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo</h1>
<p><a href="/foo.ch1.html">Ch1</a></p>
<hr>
<strong>Better Children</strong>
<ol>
<li><a href="foo.ch1">Ch1</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p HTML: NO_HIERARCHY 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo</h1>
<p><a href="/foo.ch1.html">Ch1</a></p>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p HTML: NO_HIERARCHY_VIA_FM 1`] = `
VFile {
  "contents": "<h1 id="foo">Foo</h1>
<p><a href="/foo.ch1.html">Ch1</a></p>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p HTML: SKIP_LEVELS 1`] = `
VFile {
  "contents": "<h1 id="daily">Daily</h1>
<p><a href="/foo.ch1.html">Ch1</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href="daily.journal.2020.07.01.one">One</a></li>
<li><a href="daily.journal.2020.07.05.two">Two</a></li>
</ol>",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p MD_DENDRON: BASIC 1`] = `
VFile {
  "contents": "# Foo

[Ch1](foo.ch1.html)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p MD_DENDRON: NO_HIERARCHY 1`] = `
VFile {
  "contents": "# Foo

[Ch1](foo.ch1.html)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p MD_DENDRON: NO_HIERARCHY_VIA_FM 1`] = `
VFile {
  "contents": "# Foo

[Ch1](foo.ch1.html)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;

exports[`hierarchies > %p MD_DENDRON: SKIP_LEVELS 1`] = `
VFile {
  "contents": "# Daily

[Ch1](foo.ch1.html)

",
  "cwd": "/Users/pravliv/Documents/int/ssh/dendron",
  "data": {},
  "history": [],
  "messages": [],
}
`;
